
- Change `haskell-indentation-mode' to never jump back a whole line
  when pressing DEL.  The old behavior can be restored by setting
  `haskell-indentation-delete-backward-jump-line' to t

- New convenience function `haskell-cabal-visit-file' for locating and
  visiting most likely `.cabal` file associated with current buffer

* Changes in 13.7

See also [[https://github.com/haskell/haskell-mode/compare/v13.06...v13.07][detailed Git history]].

- Convert NEWS (this file) to Org mode style and include NEWS file in
  package and add command for visiting NEWS file
  (M-x haskell-mode-view-news)

- Officially drop support for versions prior to Emacs 23

- New work-in-progress Info manual for haskell-mode

- Remove deprecated `haskell-{hugs,ghci}' modules

- Font-locking changes:
  - Remove deprecated `turn-on-haskell-font-lock` function
  - Improve font-locking of type-signatures in presence of newlines
  - Use `font-lock-preprocessor-face' instead of the previously used
    `font-lock-warning-face` for CPP directives
  - Use `font-lock-warning-face` instead  of the previously used
    `font-lock-preprocessor-face` for Git merge conflict annotations.

- Improvements to `haskell-move-nested' module:
  - Add support for operating on active regions
  - New interactive commands `haskell-move-nested-{left,right}` which
    support numeric prefix arguments for controlling the amount of
    shifting to apply.

- Add `haskell-unicode-input-method.el` to distribution
  (enable with `turn-on-haskell-unicode-input-method`)

- Fix all byte-compilation warnings

- Build-system:
  - For in-place installation, `haskell-site-file.el' is renamed
    to `haskell-mode-autoloads.el`
  - Auto-generate ELPA compatible README file by extracting header of
    haskell-mode.el
  - New "make check" target
  - Add Travis-CI build jobs for testing byte-compilation with
    multiple Emacs versions

- Reorganize customize settings